rewrite of paired test with lm

--- a/r4babs2/week-3/overview.qmd
+++ b/r4babs2/week-3/overview.qmd
@@ -5,8 +5,16 @@ toc: true
 toc-location: right
 ---
 
-This week you will how to use and interpret the general linear model when the explanatory (*x*) variable is categorical with two possible values. These tests are also known as *t*-tests. Just as with single linear regression, the response variable is continuous, and the model puts a line of best through data and has two parameters called the intercept and the slope. These have the same in interpretation as they do in linear regression. The intercept is one of the group means and the slope is the difference between that mean and the other group mean. You will also learn about the non-parametric tests we use when the assumptions of the general linear model are not met. 
-
+This week you will how to use and interpret the general linear model
+when the explanatory (or *x*) variable is categorical with two possible
+values. These tests are also known as *t*-tests. Just as with single
+linear regression, the response variable is continuous, the model puts a
+line of best through data and has two parameters called the intercept
+and the slope. These have the same in interpretation as they do in
+linear regression. The intercept is one of the group means, and the
+slope is the difference between that mean and the other group mean. You
+will also learn about the non-parametric tests we use when the
+assumptions of the general linear model are not met.
 
 ### Learning objectives
 
@@ -14,8 +22,8 @@ The successful student will be able to:
 
 -   understand the principles of two-sample tests
 
--   appreciate that two-sample tests with `lm()` are based on the normal distribution
-and thus have assumptions
+-   appreciate that two-sample tests with `lm()` are based on the normal
+    distribution and thus have assumptions
 
 -   appropriately select parametric and non-parametric two-sample tests
 
@@ -25,7 +33,8 @@ and thus have assumptions
 
 -   evaluate whether the assumptions of `lm()` are met
 
--   scientifically report a two-sample test result including appropriate figures
+-   scientifically report a two-sample test result including appropriate
+    figures
 
 ### Instructions
 
@@ -33,15 +42,14 @@ and thus have assumptions
 
     i.  📖 Read Two-Sample tests
 
-
 2.  [Workshop](workshop.qmd)
-    
-    i.   💻 Parametric two-sample test
-    ii.  💻 Non-parametric two-sample test
+
+    i.  💻 Parametric two-sample test
+    ii. 💻 Non-parametric two-sample test
     iii. 💻 Parametric paired-sample test
 
 3.  [Consolidate](study_after_workshop.qmd)
 
-    i.  💻 Appropriately test whether a genetic modification was successful in increasing omega 3 fatty acids in *Cannabis sativa*. 
-
-    ii. 💻 .... 
+    i.  💻 Appropriately test whether a genetic modification was
+        successful in increasing omega 3 fatty acids in *Cannabis
+        sativa*.
