--- a/r4babs2/week-3/study_after_workshop.qmd
+++ b/r4babs2/week-3/study_after_workshop.qmd
@@ -11,7 +11,8 @@ format:
 
 # Set up
 
-If you have just opened RStudio you will want to load the **`tidyverse`** package
+If you have just opened RStudio you will want to load the
+**`tidyverse`** package
 
 ```{r}
 #| code-fold: false
@@ -20,8 +21,14 @@ library(tidyverse)
 
 # Exercises
 
-1.  💻 Plant Biotech. Some plant biotechnologists are trying to increase the quantity of omega 3 fatty acids in Cannabis sativa. They have developed a genetically modified line using genes from *Linum usitatissimum* (linseed). They grow 50 wild type and fifty modified plants to maturity, collect the seeds and determine the amount of omega 3 fatty acids. The data are in [csativa.txt](data-raw/csativa.txt). Do you think their modification has been successful?
-
+1.  💻 Plant Biotech. Some plant biotechnologists are trying to increase
+    the quantity of omega 3 fatty acids in Cannabis sativa. They have
+    developed a genetically modified line using genes from *Linum
+    usitatissimum* (linseed). They grow 50 wild type and fifty modified
+    plants to maturity, collect the seeds and determine the amount of
+    omega 3 fatty acids. The data are in
+    [csativa.txt](data-raw/csativa.txt). Do you think their modification
+    has been successful?
 
 ```{r}
 #| output: false
@@ -29,9 +36,10 @@ library(tidyverse)
 csativa  <-  read_table("data-raw/csativa.txt")
 str(csativa)
 
-# First realise that this is a two sample test. You have two independent samples
-#  - there are a total of 100 different plants and the values in one 
-#  group have no relationship to the values in the other.
+# First realise that this is a two sample test. You have two 
+# independent samples - there are a total of 100 different plants 
+# and the values in one group have no relationship to the values 
+# in the other.
 ```
 
 ```{r}
@@ -58,7 +66,8 @@ csativa_summary <- csativa %>%
 ```{r}
 #| output: false
 
-# The data seem to be continuous so it is likely that a parametric test will be fine
+# The data seem to be continuous so it is likely that a parametric 
+# test will be fine.
 # we will check the other assumptions after we have run the lm
 
 # build the statistical model
@@ -67,9 +76,11 @@ mod <- lm(data = csativa, omega ~ plant)
 
 # examine it
 summary(mod)
-# So there is a significant difference but you need to make sure you know the direction!
-# Wild plants have a significantly higher omega 3 content (mean +/- s.e =  56.41 +/- 1.11) 
-# than modified plants (49.46 +/- 0.82)(t = 5.03; d.f. = 98; p < 0.0001).
+# So there is a significant difference but you need to make sure 
+# you know the direction!
+# Wild plants have a significantly higher omega 3 content 
+# (mean +/- s.e =  56.41 +/- 1.11) than modified plants 
+# (49.46 +/- 0.82)(t = 5.03; d.f. = 98; p < 0.0001).
 ```
 
 ```{r}
@@ -77,14 +88,16 @@ summary(mod)
 
 # let's check the assumptions
 plot(mod, which = 1) 
-# we're looking for the variance in the residuals to be the same in both groups.
-# This looks OK. Maybe a bit higher in the wild plants (with the higher mean)
+# we're looking for the variance in the residuals to be the 
+# same in both groups.
+# This looks OK. Maybe a bit higher in the wild plants
+# (with the higher mean)
  
 hist(mod$residuals)
 shapiro.test(mod$residuals)
-# On balance the use of lm() is probably justifiable  The variance isn't quite equal 
-# and the histogram looks a bit off normal but the normality test is NS and the 
-# effect (in the figure) is clear.
+# On balance the use of lm() is probably justifiable  The variance 
+# isn't quite equal and the histogram looks a bit off normal but 
+# the normality test is NS and the effect (in the figure) is clear.
 ```
 
 ```{r}
