fix knitr citations in w3-6

--- a/r4babs2/week-4/workshop.qmd
+++ b/r4babs2/week-4/workshop.qmd
@@ -532,6 +532,8 @@ This contains all the code needed in the workshop even where it is not visible o
 
 The `workshop.qmd` file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. [View the Qmd in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs2/week-4/workshop.qmd). Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
 
-Pages made with R [@R-core], Quarto [@allaire2022], `knitr` [@knitr], `kableExtra` [@kableExtra]
+Pages made with R [@R-core], Quarto [@allaire2022], `knitr` 
+[@knitr1; @knitr2; @knitr3],
+`kableExtra` [@kableExtra]
 
 # References
