--- a/r4babs2/week-4/study_before_workshop.qmd
+++ b/r4babs2/week-4/study_before_workshop.qmd
@@ -5,7 +5,5 @@ toc: true
 toc-location: right
 ---
 
-1.  📖 Read [One-way ANOVA and Kruskal-Wallis](https://3mmarand.github.io/comp4biosci/one_way_anova_and_kw.html) 
-
-
-
+1.  📖 Read [One-way ANOVA and
+    Kruskal-Wallis](https://3mmarand.github.io/comp4biosci/one_way_anova_and_kw.html)
